Fix about us and contact text to appear under menu.
Before: it appeared in one line with menu, overlaping it, when text
size was larger than ~10 words.

--- a/vcard/static/vcard/style.css
+++ b/vcard/static/vcard/style.css
@@ -71,6 +71,9 @@ body.index_page {
     background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
+.content {
+    margin: 100px 100px 0 100px;
+}
 
 .slide {  /* Fullpage.js tweak */
     position:relative;
